--- a/QuizHeads/app/src/main/AndroidManifest.xml
+++ b/QuizHeads/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.QuizHeads"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".firebase.splash.SplashViewModel"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.QuizHeads">
