--- a/QuizHeads/app/src/main/AndroidManifest.xml
+++ b/QuizHeads/app/src/main/AndroidManifest.xml
@@ -11,18 +11,53 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizHeads"
-        android:usesCleartextTraffic="true"
-        tools:targetApi="31"
-        android:name = ".NotesHiltApp">
+        tools:targetApi="31">
         <activity
-            android:name=".NotesActivity"
+            android:name=".MainActivity"
             android:exported="true"
+            android:label="@string/app_name"
             android:theme="@style/Theme.QuizHeads">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ScoreActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.QuizHeads">
+        </activity>
+        <activity
+            android:name=".ScoreDetailsActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.QuizHeads">
+        </activity>
+        <activity
+            android:name=".QuizActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.QuizHeads">
+        </activity>
+        <activity
+            android:name=".QuizDetailsActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.QuizHeads">
+        </activity>
+        <activity
+            android:name=".FriendsActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.QuizHeads">
+        </activity>
+        <activity
+            android:name=".FriendsDetailsActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.QuizHeads">
         </activity>
     </application>
 
