--- a/QuizHeads/app/src/main/AndroidManifest.xml
+++ b/QuizHeads/app/src/main/AndroidManifest.xml
@@ -59,6 +59,18 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.QuizHeads">
         </activity>
+        <activity
+            android:name=".firebase.LoginActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.QuizHeads">
+        </activity>
+        <activity
+            android:name=".firebase.SignupActivity"
+            android:exported="true">
+        </activity>
+
+
     </application>
 
 </manifest>
