--- a/QuizHeads/app/src/main/AndroidManifest.xml
+++ b/QuizHeads/app/src/main/AndroidManifest.xml
@@ -65,6 +65,12 @@
             android:name=".firebase.SignupActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".AddFriendActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.QuizHeads">
+        </activity>
 
 
     </application>
